z-index overflow  fix

--- a/css/main.less
+++ b/css/main.less
@@ -853,9 +853,8 @@ input[type=submit] {
 	right: 0;
 	padding: 40px 0 0 0;
 	overflow-y: scroll;
-	.box-sizing(border-box);
 	margin: 0;
-	z-index: 0;
+	.box-sizing(border-box);
 	.transition(right .2s ease-in-out);
 	a {
 		color: #f0f0f0;
